# pharma-papers

./: README.md  output.csv  pyproject.toml
src/pharma_papers/: cli.py  fetch_papers.py
